# WeatherBot

./: main.py  pyproject.toml
Constants/: __init__.py  bot_message.py  global_env_variables.py
conditions/: conditions_yandex.py  weathercom_conditions.py
database/: sqlite.py
natasha/: facts_extractor.py
natasha_util/: facts_extractor.py  helpers.py
weather/: __init__.py  accu_typings.py  custom_typings.py  get_city_coords.py  get_forecast.py  get_weather.py  main.py  pretty_message.py
